--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "spaboot-service-frontend",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "predeploy": "npm run build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.3.5",
@@ -22,12 +21,14 @@
     "bootstrap": "^5.3.3",
     "contentful": "^10.8.3",
     "pinia": "^2.1.7",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
@@ -35,5 +36,6 @@
     "prettier": "^3.0.3",
     "vite": "^5.1.5",
     "vite-plugin-vue-devtools": "^7.0.16"
-  }
+  },
+  "type": "module"
 }
